# kramerius-client

./: .env.template  .gitignore  Makefile  README.md  __init__.py  __main__.py  client.py  document.py  pyproject.toml  requirements.txt  requirements_install.txt  run.sh  search.py  types.py
kramerius/: __init__.py  __main__.py  parsers.py
kramerius/client/: akubra.py  base.py  client.py  items.py  licenses.py  processing.py  rights.py  roles.py  sdnnt.py  search.py  statistics.py
kramerius/custom_types/: kramerius.py  licenses.py
kramerius/definitions/: __init__.py  actions.py  akubra.py  criteria.py  foxml.py  kramerius.py  licenses.py
kramerius/features/access_control/: __init__.py  models.py  param_chunking.py  push.py
kramerius/schemas/: __init__.py  akubra.py  config.py  document.py  licenses.py  processing.py  rights.py  roles.py  sdnnt.py  search.py
