[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "kramerius"
version = "0.1.0"
description = "Kramerius v7 Client"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "lxml",
    "pydantic",
    "requests",
    "solrify @ git+https://github.com/moravianlibrary/solrify.git"
]
dynamic = ["readme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kramerius*"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
