[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "kramerius"
version = "0.2.0"
description = "Kramerius v7 Client"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dynamic = ["dependencies", "readme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kramerius*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}

[project.scripts]
kramerius = "kramerius.__main__:main"
